@@ -6,7 +6,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: mathfunc.n,v 1.13.2.1 2007/11/01 16:25:49 dgp Exp $
+'\" RCS: @(#) $Id: mathfunc.n,v 1.13.2.2 2007/11/02 14:49:14 dgp Exp $
 '\" 
 .so man.macros
 .TH mathfunc n 8.5 Tcl "Tcl Mathematical Functions"
@@ -107,6 +107,14 @@ of which work solely with floating-point numbers unless otherwise noted:
 \fBtan\fR	\fBtanh\fR	\fBwide\fR
 .DE
 .PP
+In addition to these predefined functions, applications may
+define additional functions by using \fBproc\fR (or any other method,
+such as \fBinterp alias\fR or \fBTcl_CreateObjCommand\fR) to define
+new commands in the \fBtcl::mathfunc\fR namespace.  In addition, an
+obsolete interface named \fBTcl_CreateMathFunc\fR() is available to
+extensions that are written in C. The latter interface is not recommended
+for new implementations.
+.SS "DETAILED DEFINITIONS"
 .TP
 \fBabs \fIarg\fR
 Returns the absolute value of \fIarg\fR.  \fIArg\fR may be either
@@ -255,14 +263,6 @@ Returns the hyperbolic tangent of \fIarg\fR.
 The argument may be any numeric value.  The integer part of \fIarg\fR
 is determined, and then the low order 64 bits of that integer value
 are returned as an integer value.  
-.PP
-In addition to these predefined functions, applications may
-define additional functions by using \fBproc\fR (or any other method,
-such as \fBinterp alias\fR or \fBTcl_CreateObjCommand\fR) to define
-new commands in the \fBtcl::mathfunc\fR namespace.  In addition, an
-obsolete interface named \fBTcl_CreateMathFunc\fR() is available to
-extensions that are written in C. The latter interface is not recommended
-for new implementations.
 .SH "SEE ALSO"
 expr(n), mathop(n), namespace(n)
 .SH "COPYRIGHT"
