@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: split.n,v 1.5.12.1 2007/11/01 16:25:55 dgp Exp $
+'\" RCS: @(#) $Id: split.n,v 1.5.12.2 2007/11/02 14:49:15 dgp Exp $
 '\" 
 .so man.macros
 .TH split n "" Tcl "Tcl Built-In Commands"
@@ -34,7 +34,7 @@ If \fIsplitChars\fR is an empty string then each character of
 Divide up a USENET group name into its hierarchical components:
 .CS
 \fBsplit\fR "comp.lang.tcl.announce" .
-     \fI=> comp lang tcl announce\fR
+      \fI\(-> comp lang tcl announce\fR
 .CE
 .PP
 See how the \fBsplit\fR command splits on \fIevery\fR character in
@@ -42,19 +42,19 @@ See how the \fBsplit\fR command splits on \fIevery\fR character in
 careful:
 .CS
 \fBsplit\fR "alpha beta gamma" "temp"
-     \fI=> al {ha b} {} {a ga} {} a\fR
+      \fI\(-> al {ha b} {} {a ga} {} a\fR
 .CE
 .PP
 Extract the list words from a string that is not a well-formed list:
 .CS
 \fBsplit\fR "Example with {unbalanced brace character"
-     \fI=> Example with \e{unbalanced brace character\fR
+      \fI\(-> Example with \e{unbalanced brace character\fR
 .CE
 .PP
 Split a string into its constituent characters
 .CS
 \fBsplit\fR "Hello world" {}
-     \fI=> H e l l o { } w o r l d\fR
+      \fI\(-> H e l l o { } w o r l d\fR
 .CE
 .SS "PARSING RECORD-ORIENTED FILES"
 Parse a Unix /etc/passwd file, which consists of one entry per line,
